stopping here today zzzzz

--- a/src/index.scss
+++ b/src/index.scss
@@ -68,7 +68,7 @@ body{
         bottom: -10vw;
         right: -10vw;
         border-radius: 50%;
-        background-color: #3d3d6455;
+        background-color: #3d3d6433;
         filter: blur(100px);
         pointer-events: none;
     }
@@ -100,6 +100,7 @@ body{
             left: 0;
             backdrop-filter: blur(5px);
             width: 100vw;
+            z-index: 7;
             background-color: rgba($primary-color, 0.7);
             @include flexCenter(row);
             
@@ -671,7 +672,7 @@ body{
         }
     }
     
-    @media screen and (min-width: 100px) {
+    @media screen and (min-width: 700px) {
         .menu{
             opacity: 1;
             visibility: visible;
