stopping here today zzzzz

--- a/src/index.scss
+++ b/src/index.scss
@@ -702,6 +702,16 @@ body{
         }
     }
 
+    @media screen and (max-width: 699px) {
+        .hamburger{
+            border-color: transparent !important;
+        }
+
+        .menu{
+            background-color: $primary-color !important;
+        }
+    }
+
 }
 
 ::-webkit-scrollbar{
