--- a/src/index.scss
+++ b/src/index.scss
@@ -356,7 +356,7 @@ body{
         width: 100%;
         height: 100%;
         top: 0;
-        left: 0;
+        right: 0;
         // background-color: $primary-color;
         @include flexCenter(row);
         @include transitionEase(0.5s);
@@ -402,6 +402,7 @@ body{
                 font-size: 25px;
                 color: $secondary-color;
                 @include transitionEase(0.5s);
+                transform: scale(0);
                 
                 &:hover{
                     border: 5px solid #bbd0f7;
@@ -463,6 +464,16 @@ body{
         .menu{
             opacity: 1;
             visibility: visible;
+            
+            .hamburger{
+                transform: scale(1);
+            }
+        }
+
+        .dashboard{
+            .hamburger{
+                transform: scale(0);
+            }
         }
 
     }
@@ -678,7 +689,20 @@ body{
         .menu{
             opacity: 1;
             visibility: visible;
-            transform: translateX(100%);
+            transform: translateX(100vw);
+            background-color: #fffc;
+            backdrop-filter: blur(7px);
+            width: 45vw;
+            min-width: 300px;
+            right: 5vw;
+            height: 90vh;
+            top: 5vh;
+            border-radius: 30px;
+            // box-shadow: 0px 0px 40px #3d3d6411;
+
+            nav{
+                padding: 10px 20px;
+            }
         }
 
         &.show-menu .menu{
@@ -692,8 +716,10 @@ body{
             visibility: visible;
         }
 
-        &.show-menu .dashboard{
-            transform: translateX(-100%);
+        &.show-menu .backdrop{
+            opacity: 1;
+            visibility: visible;
+            // transform: translateX(-100%);
         }
     }
 
