stopping here today zzzzz

--- a/src/index.scss
+++ b/src/index.scss
@@ -698,6 +698,7 @@ body{
             backdrop-filter: blur(7px);
             width: 45vw;
             min-width: 300px;
+            max-width: 450px;
             right: 5vw;
             height: 90vh;
             top: 5vh;
