--- a/src/index.scss
+++ b/src/index.scss
@@ -549,6 +549,7 @@ body{
                     align-items: center;
     
                     .goal{
+                        cursor: pointer;
                         display: flex;
                         justify-content: center;
                         align-items: center;
@@ -735,6 +736,31 @@ body{
             opacity: 1;
             visibility: visible;
             // transform: translateX(-100%);
+        }
+
+        .new-task-big{
+            border-radius: 40px;
+            width: 90vw;
+            left: 5vw;
+            bottom: 5vw;
+
+            .closing{
+                display: none;
+            }
+        }
+    }
+
+    @media screen and (min-width: 1100px) {
+        .new-task-big{
+            width: 500px;
+            max-height: 450px;
+            min-height: 450px;
+            transform: none;
+            transform: translateX(-100vw);
+            
+            &.show{
+                transform: translateX(0);
+            }
         }
     }
 
