--- a/src/index.scss
+++ b/src/index.scss
@@ -743,6 +743,11 @@ body{
             width: 90vw;
             left: 5vw;
             bottom: 5vw;
+            transform: translateY(150%);
+
+            &.show{
+                transform: translateY(0);
+            }
 
             .closing{
                 display: none;
