--- a/src/index.scss
+++ b/src/index.scss
@@ -132,6 +132,7 @@ body{
                     span{
                         color: $secondary-color;
                         font-weight: 600;
+                        text-transform: capitalize;
                     }
                 }
 
@@ -362,6 +363,26 @@ body{
                 @include transitionEase(0.5s);
             }
         }
+
+        .no-tasks-here{
+            height: 100%;
+            width: 100%;
+            gap: 20px;
+            font-size: 20px;
+            color: #777;
+            @include flexCenter(column);
+            pointer-events: none;
+            user-select: none;
+
+            img{
+                width: 30vw;
+                max-width: 100px;
+                min-width: 70px;
+                margin-bottom: 50px;
+                opacity: 0.6;
+            }
+
+        }
     }
 
     .menu{
@@ -448,6 +469,13 @@ body{
                     color: $primary-color;
                     background-color: $secondary-color;
                 }
+
+                &.hidden{
+                    opacity: 0.3;
+                    user-select: none;
+                    cursor: not-allowed;
+                    pointer-events: none
+                }
             }
         }
 
@@ -505,6 +533,7 @@ body{
         transform: translateY(110%);
 
         height: 50vh;
+        min-height: 250px;
         max-height: 300px;
         background-color: #fff;
         z-index: 9;
@@ -526,6 +555,14 @@ body{
             opacity: 0.3;
             user-select: none;
             pointer-events: none;
+            @include transitionEase(0.5s)
+        }
+
+        &.touched{
+            .closing{
+                width: 50px;
+                background-color: #3d3d64;
+            }
         }
 
         .content{
@@ -662,7 +699,7 @@ body{
                         }
                     }
                     
-                    button:first-child{
+                    div:first-child{
                         color: $secondary-color;
                         padding: 0;
                         text-transform: lowercase;
@@ -700,7 +737,7 @@ body{
         }
     }
     
-    @media screen and (min-width: 700px) {
+    @media screen and (min-width: 600px) {
         .menu{
             opacity: 1;
             visibility: visible;
