--- a/src/index.scss
+++ b/src/index.scss
@@ -277,6 +277,9 @@ body{
                             z-index: 1;
                             transform: translateY(3px);
                             color: #fff;
+                            pointer-events: none;
+                            user-select: none;
+                            display: none;
                         }
                     }
                 }
@@ -319,6 +322,7 @@ body{
             border-radius: 14px;
             margin-top: 50px;
             margin-bottom: 30px;
+            cursor: pointer;
             background-color: $secondary-color;
             color: #fff;
             border: none;
@@ -376,10 +380,23 @@ body{
 
             img{
                 width: 30vw;
+                height: 30vw;
                 max-width: 100px;
+                max-height: 100px;
                 min-width: 70px;
+                min-height: 70px;
                 margin-bottom: 50px;
                 opacity: 0.6;
+                animation: opacitate 2s ease forwards;
+            }
+
+            @keyframes opacitate {
+                0%{
+                   opacity: 0;
+                }
+                100%{
+                    opacity: 0.6;
+                }
             }
 
         }
