--- a/src/index.scss
+++ b/src/index.scss
@@ -122,11 +122,19 @@ body{
                 .about-user{
                     @include flexCenter(row);
                     gap: 10px;
+                    font-family: monospace;
+                    font-weight: 700;
+                    font-size: 24px;
+                    color: $secondary-color;
 
                     img{
                         width: 35px;
-                        box-shadow: 0px 0px 10px #bbd0f7;
-                        border-radius: 50%;
+                        display: none;
+                        transform: translateY(-2px);
+                    }
+
+                    i{
+                        color: rgb(223, 2, 2);
                     }
 
                     span{
