stopping here today zzzzz

--- a/src/index.scss
+++ b/src/index.scss
@@ -888,6 +888,7 @@ body{
 
                 .tasks-content{
                     filter: invert(10);
+                    border-color: rgba($secondary-color, 0.2);
                 }
 
                 nav{
