--- a/src/index.scss
+++ b/src/index.scss
@@ -800,6 +800,7 @@ body{
                 width: 45vw;
                 min-width: 300px;
                 max-width: 450px;
+                max-height: 900px;
                 right: 5vw;
                 height: 90vh;
                 top: 5vh;
@@ -873,6 +874,70 @@ body{
     
         .hamburger{
             border-color: transparent !important;
+        }
+    }
+
+    .preloader{
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: rgba($primary-color, 0.85);
+        backdrop-filter: blur(8px);
+        top: 0;
+        left: 0;
+        z-index: 200;
+        @include flexCenter(row);
+        animation: preloader-hide 0.3s ease forwards;
+        animation-delay: 2s;
+
+        @keyframes preloader-hide{
+            0%{
+                opacity: 1;
+                visibility: visible;
+            }
+            // 0%{
+            //     opacity: 1;
+            //     visibility: visible;
+            // }
+            100%{
+                opacity: 0;
+                visibility: hidden;
+            }
+        }
+
+        .preloader-circle{
+            width: 60px;
+            height: 60px;
+            border-radius: 100px;
+            color: $secondary-color;
+            border: 7px solid rgba($secondary-color, 0.2);
+            position: relative;
+            animation: spin-preloader 0.5s linear forwards infinite;
+
+            @media screen and (min-width: 700px) {
+                scale: 1.2;
+            }
+
+            @media screen and (min-width: 1200px) {
+                scale: 1.5;
+            }
+
+            .preloader-circle-dot{
+                width: 8px;
+                height: 8px;
+                border-radius: 100px;
+                position: absolute;
+                top: 0.3px;
+                // left: 0;
+                background-color: #3d3d64;
+            }
+
+            @keyframes spin-preloader {
+                0%{
+                    transform: rotate(-360deg);
+                }
+                100%{}
+            }
         }
     }
 
