--- a/src/index.scss
+++ b/src/index.scss
@@ -190,7 +190,7 @@ body{
                 .incomplete, .complete{
                     width: 100%;
                     display: flex;
-                    flex-direction: column;
+                    flex-direction: column-reverse;
                     gap: 30px;
                     padding: 30px 0;
                     position: relative;
@@ -447,7 +447,10 @@ body{
             right: 0;
             // background-color: $primary-color;
             @include flexCenter(row);
-            @include transitionEase(0.5s);
+            transition-property: transform;
+            transition-duration: 0.5s;
+            transition-timing-function: ease;
+            // @include transitionEase(0.5s);
             opacity: 0;
             visibility: hidden;
     
@@ -586,8 +589,8 @@ body{
             transform: translateY(110%);
     
             height: 50vh;
-            min-height: 250px;
-            max-height: 300px;
+            min-height: 300px;
+            max-height: 320px;
             background-color: #fff;
             z-index: 9;
             border-radius: 40px 40px 0 0;
@@ -637,6 +640,8 @@ body{
                         gap: 10px;
                         justify-content: center;
                         align-items: center;
+                        position: relative;
+                        z-index: 2;
         
                         .goal{
                             cursor: pointer;
@@ -655,6 +660,11 @@ body{
                                 color: green;
                                 @include transitionEase(0.3s)
                             }
+
+                            i{
+                                color: #3d3d64;
+                                @include transitionEase(0.5s)
+                            }
                             
                             &:hover{
                                 background-color: #3d3d64;
@@ -663,11 +673,19 @@ body{
                                 span{
                                     color: gold;
                                 }
+                                
+                                i{
+                                    color: $primary-color;
+                                }
                             }
                             
                             &.active{
                                 background-color: #3d3d64;
                                 color: #fff;
+                                
+                                i{
+                                    color: gold;
+                                }
     
                                 span{
                                     color: gold;
@@ -688,11 +706,12 @@ body{
                             position: absolute;
                             // top: -17px;
                             left: 10px;
-                            padding: 5px 10px;
+                            padding: 3px 10px;
                             background-color: #fff;
                             color: rgba(#3d3d64, 0.9);
                             @include transitionEase(0.5s);
                             transform: translateY(-22px);
+                            border-radius: 100px;
                         }
     
                         input, textarea{
@@ -798,7 +817,7 @@ body{
                 background-color: #fffc;
                 backdrop-filter: blur(7px);
                 width: 45vw;
-                min-width: 300px;
+                min-width: 400px;
                 max-width: 450px;
                 max-height: 900px;
                 right: 5vw;
@@ -984,6 +1003,10 @@ body{
                     img[src="img/dream.png"] {
                         filter: invert(0);
                     }
+
+                    img[src="img/tech.png"] {
+                        filter: invert(0);
+                    }
                       
                 }
                 
@@ -1048,6 +1071,11 @@ body{
 
             .menu{
                 filter: invert(10);
+                backdrop-filter: blur(10px) invert(10);
+
+                .theme{
+                    rotate: 45deg;
+                }
             }
         }
     }
