--- a/src/index.scss
+++ b/src/index.scss
@@ -1081,20 +1081,75 @@ body{
     }
 
     .about{
-        .content{
-            filter: invert(10);
+        & .dashboard > .content{
+            // filter: invert(10);
             padding: 100px  5vw;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            flex-direction: column;
+            gap: 13px;
+            max-width: 1000px;
 
             h2{
                 font-size: 3rem;
+                width: 100%;
+                color: $secondary-color;
                 i{
                     color: red;
                     filter: invert(10);
                 }
             }
+
+            span{
+                color: darken(#3d3d64, 10%);
+            }
+
+            a{
+                padding: 15px;
+                background-color: $secondary-color;
+                color: #fff;
+                border-radius: 10px;
+                text-decoration: none;
+                @include flexCenter(row);
+                margin-top: 20px;
+                gap: 15px;
+                width: 80vw;
+                max-width: 400px;
+                @include transitionEase(0.5s);
+                
+                i{
+                    @include transitionEase(0.5s);
+                }
+
+                &:hover{
+                    background-color: rgba(darken($secondary-color, 20%), 0.9);
+
+                    i{
+                        transform: translateX(10px);
+                    }
+                }
+            }
+        }
+
+    }
+    
+    &.dark{
+        .about{
+            .dashboard > .content{
+                filter: invert(10);
+                
+                a{
+                    filter: invert(10);
+                    background-color: rgba(darken($secondary-color, 20%), 0.9);
+                    
+                    &:hover{
+                        background-color: rgba(darken($secondary-color, 100%), 0.9);
+                    }
+                }
+            }
         }
     }
-
 
 }
 
