--- a/src/index.scss
+++ b/src/index.scss
@@ -1105,6 +1105,10 @@ body{
 
             span{
                 color: darken(#3d3d64, 10%);
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                margin-bottom: 10px;
             }
 
             a{
