--- a/src/index.scss
+++ b/src/index.scss
@@ -1099,12 +1099,13 @@ body{
     .about{
         & .dashboard > .content{
             // filter: invert(10);
-            padding: 100px  5vw;
+            padding: 100px 7vw;
             display: flex;
             justify-content: flex-start;
             align-items: center;
             flex-direction: column;
             gap: 13px;
+            // width: 90vw;
             max-width: 1000px;
 
             h2{
