stopping here today zzzzz

--- a/src/index.scss
+++ b/src/index.scss
@@ -253,6 +253,7 @@ body{
                             .task-name{
                                 font-size: 15px;
                                 min-width: 100% !important;
+                                max-width: 100% !important;
                             }
 
                             .task-type{
@@ -260,6 +261,25 @@ body{
                                     width: 15px !important;
                                 }
                                 font-size: 13px;
+                            }
+
+                            .delete-task{
+                                left: 0;
+                                width: 40px !important;
+                                
+                                div{
+                                    position: relative;
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+                                }
+
+                                i{
+                                    position: absolute;
+                                    top: 10px;
+                                    font-size: 19px !important;
+                                    right: -15px;
+                                }
                             }
                         }
                     }
