stopping here today zzzzz

--- a/src/index.scss
+++ b/src/index.scss
@@ -257,6 +257,7 @@ body{
                             }
 
                             .task-type{
+                                gap: 6px !important;
                                 img{
                                     width: 15px !important;
                                 }
