stopping here today zzzzz

--- a/src/index.scss
+++ b/src/index.scss
@@ -245,6 +245,7 @@ body{
 
                 @media screen and (max-width: 450px) {
                     .incomplete, .complete{
+                        gap: 17px !important;
                         .task{
                             max-width: 40vw;
                             padding-right: 60px !important;
