--- a/src/index.scss
+++ b/src/index.scss
@@ -256,6 +256,7 @@ body{
                             overflow: hidden;
 
                             .task-details{
+                                z-index: 4;
                                 height: 100% !important;
                                 min-height: 100% !important;
                             }
